name:                moz
version:             0.0.0.0
synopsis:            Client for Mozscape API.
description:         The Mozscape API enables programmatic access to Moz.
                     This library provides a wrapper for that API.
license:             MIT
license-file:        LICENSE
author:              Alex Smith
maintainer:          Alex Smith <ags@fastmail.fm>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:       Moz.Auth
                       , Moz.Linkscape
                       , Moz.Linkscape.URLMetrics
  other-modules:       Moz.Client
  build-depends:       base >= 4.8 && < 5.0
                       , aeson
                       , base64-bytestring
                       , bytestring
                       , cryptohash
                       , http-conduit
                       , http-types
                       , mtl
                       , time
  extensions:         OverloadedStrings

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                       , moz
                       , hspec
                       , mtl
                       , time
